--- a/html/login.html
+++ b/html/login.html
@@ -1,29 +1,28 @@
-<div id="login">
-    <h2>Login Form</h2>
+<div id="loginForm">
+    <div class="container">
+        <h1 class="form-heading">
+            <img src="img/fei_logo.png" height="45" width="90" style="float: left">
+        </h1>
+        <div class="login-form">
+            <div class="main-div">
+                <div class="panel">
+                    <h2>User Login</h2>
+                    <p>Please enter your email and password</p>
+                </div>
+                <form id="Login">
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="inputEmail" placeholder="Email Address">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                    </div>
+                    <div class="forgot">
+                        <a href="#">Forgot password?</a>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
 
-    <form >
-        <div class="imgcontainer">
-            <img src="/img/fei_logo.png" alt="Avatar" class="avatar">
+                </form>
+            </div>
         </div>
-
-        <div class="container">
-            <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
-
-            <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
-
-            <button type="submit">Login</button>
-            <label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label>
-        </div>
-
-        <div class="container" style="background-color:#f1f1f1">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="#">password?</a></span>
-        </div>
-    </form>
-
-
+    </div>
 </div>
