--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -112,7 +112,7 @@
                         <div role="tabpanel" class="tab-pane container fade col-sm-12" id="Competitors">
 
                             <div id="3d-graph" width="600px" ></div>
-                            <div >
+                            <div  id="graph_comp_name">
                                 Connection Details
                             </div>
 
